# pneuma

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: servo-smoke.yml  week8-servo-smoke.yml
crates/pneuma-broker/: Cargo.toml
crates/pneuma-broker/src/: broker.rs  engine_factory.rs  handle.rs  lib.rs  service.rs
crates/pneuma-broker/src/confidence/: mod.rs  scorer.rs  signals.rs
crates/pneuma-broker/src/migration/: mod.rs  state.rs
crates/pneuma-core/: Cargo.toml
crates/pneuma-core/src/: cli.rs  main.rs
crates/pneuma-core/tests/: week12_escalation_smoke.rs  week7_servo_smoke.rs
crates/pneuma-engines/: Cargo.toml
crates/pneuma-engines/src/: lib.rs  migration.rs  traits.rs
crates/pneuma-engines/src/ladybird/: bridge.rs  engine.rs  mod.rs
crates/pneuma-engines/src/servo/: engine.rs  mod.rs
crates/pneuma-js/: Cargo.toml
crates/pneuma-js/src/: ffi_bridge.rs  lib.rs  runtime.rs
crates/pneuma-js/src/shim/: ghost_shim.js
crates/pneuma-network/: Cargo.toml
crates/pneuma-network/src/: cookie_jar.rs  interceptor.rs  lib.rs
crates/pneuma-network/src/stealth/: h2.rs  identity.rs  mod.rs  tls.rs
crates/pneuma-plugin/: Cargo.toml
crates/pneuma-plugin/src/: discovery.rs  lib.rs  loader.rs  vtable.rs
crates/pneuma-stealth/: Cargo.toml
crates/pneuma-stealth/src/: behavioral.rs  canvas.rs  lib.rs
crates/pneuma-stealth/src/profiles/: chrome_120.rs  firefox_121.rs  mod.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RFC-001.md  plugin-authoring.md
patches/: registry.toml
patches/poly/: aspect_ratio.js  es2019_object.js
patches/shims/: abort_controller.js  web_speech_stub.js
profiles/: chrome-120-macos.toml  chrome-120-windows.toml  firefox-121-linux.toml
shims/: ladybird_headless.cpp  ladybird_headless.h  pneuma_alloc.h
tests/fixtures/test_pages/: index.html
tests/integration/: basic_navigation.rs  spa_rendering.rs  stealth_fingerprint.rs
