[package]
name = "pneuma-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "pneuma"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pneuma-broker = { path = "../pneuma-broker" }
pneuma-js = { path = "../pneuma-js" }
pneuma-engines = { path = "../pneuma-engines" }
