[package]
name = "pneuma-engines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait = "0.1"
which = "6.0"
home = "=0.5.9"
tracing.workspace = true
