[package]
name = "pneuma-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
quickjs = ["dep:rquickjs"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rquickjs = { workspace = true, optional = true }
